<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="android_course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_from">Поделиться через</string>
    <string name="student_email">vladismann@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreements">https://yandex.ru/legal/practicum_offer/</string>
    <string name="text_null">Unknown</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history_header">Вы искали</string>
    <string name="clear_search">Очистить историю</string>
    <string name="time_null">00:00</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorites_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали \nни одного плейлиста</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlists">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_descr">Описание</string>
    <string name="create">Создать</string>
    <string name="countTracks">0 треков</string>
    <string name="countMinutes">0 минут</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="sharePlaylist">Поделиться</string>
    <string name="editPlaylist">Редактировать информацию</string>
    <string name="deletelaylist">Удалить плейлист</string>


    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
    </plurals>
    <plurals name="minute_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
    </plurals>
</resources>