<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/defaultBackground"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/stToolbar"
        style="@style/ToolbarPageTittle"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarPageTittle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/CustomSwitchStyle"
        android:layout_marginTop="20dp"
        android:paddingEnd="@dimen/half_default_margin"
        android:text="@string/dark_theme"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        style="@style/SettingsTextView"
        android:drawableEnd="@drawable/share_svg"
        android:text="@string/share_app"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        style="@style/SettingsTextView"
        android:drawableEnd="@drawable/support_svg"
        android:text="@string/write_to_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreement"
        style="@style/SettingsTextView"
        android:drawableEnd="@drawable/arrow_forward"
        android:text="@string/user_agreement" />

</LinearLayout>