<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            android:layout_marginTop="10dp"/>

    </FrameLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnCount="1"
        android:orientation="vertical"
        android:rowCount="3">

        <Button
            android:id="@+id/search"
            android:foreground="?attr/selectableItemBackground"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/default_margin"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/default_radius"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            app:icon="@drawable/search_svg"
            app:iconGravity="textStart"
            app:iconTint="@color/black"/>

        <Button
            android:id="@+id/media"
            android:foreground="?attr/selectableItemBackground"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/default_margin"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/default_radius"
            android:text="@string/media"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            app:icon="@drawable/media_svg"
            app:iconGravity="textStart"
            app:iconTint="@color/black"/>

        <Button
            android:id="@+id/settings"
            android:foreground="?attr/selectableItemBackground"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/default_margin"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/default_radius"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            app:icon="@drawable/settings_svg"
            app:iconGravity="textStart"
            app:iconTint="@color/black"/>

    </GridLayout>


</LinearLayout>