<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarPageTittle"
        android:layout_height="48dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:titleTextAppearance="@style/ToolbarPageTittle" />

    <ImageView
        android:id="@+id/trackImage"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/placeholder_full_size"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/trackName"
        style="@style/AudioPlayerText"
        android:layout_width="312dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_null"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/trackImage" />

    <TextView
        android:id="@+id/trackArtist"
        style="@style/AudioPlayerText"
        android:layout_width="312dp"
        android:layout_height="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/text_null"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/trackName" />

    <ImageButton
        android:id="@+id/addToPlaylistButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/player_button_background"
        android:src="@drawable/add_to_playlist_button"
        app:layout_constraintEnd_toStartOf="@id/playAudioButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/trackArtist" />

    <ImageButton
        android:id="@+id/playAudioButton"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:background="@drawable/play_audio_button"
        app:layout_constraintBottom_toBottomOf="@id/addToPlaylistButton"
        app:layout_constraintEnd_toStartOf="@id/addLikeButton"
        app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
        app:layout_constraintTop_toTopOf="@id/addToPlaylistButton" />

    <ImageButton
        android:id="@+id/addLikeButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/player_button_background"
        android:src="@drawable/add_like_button"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/playAudioButton"
        app:layout_constraintTop_toBottomOf="@id/trackArtist" />

    <TextView
        android:id="@+id/playTime"
        style="@style/AudioPlayerText"
        android:layout_width="100dp"
        android:layout_height="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/time_null"
        app:layout_constraintEnd_toStartOf="@id/playAudioButton"
        app:layout_constraintStart_toEndOf="@id/playAudioButton"
        app:layout_constraintTop_toBottomOf="@id/playAudioButton" />

    <TextView
        android:id="@+id/duration"
        style="@style/AudioPlayerTextPlaceholder"
        android:layout_marginTop="39dp"
        android:text="@string/duration"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/playTime" />

    <TextView
        android:id="@+id/actualDuration"
        style="@style/AudioPlayerTrackInfo"
        android:text="@string/time_null"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/duration" />

    <TextView
        android:id="@+id/album"
        style="@style/AudioPlayerTextPlaceholder"
        android:layout_marginTop="17dp"
        android:text="@string/album"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/actualAlbum"
        style="@style/AudioPlayerTrackInfo"
        android:text="@string/text_null"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/album" />

    <TextView
        android:id="@+id/year"
        style="@style/AudioPlayerTextPlaceholder"
        android:layout_marginTop="17dp"
        android:text="@string/year"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/actualYear"
        style="@style/AudioPlayerTrackInfo"
        android:text="@string/text_null"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/year" />

    <TextView
        android:id="@+id/genre"
        style="@style/AudioPlayerTextPlaceholder"
        android:layout_marginTop="17dp"
        android:text="@string/genre"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/actualGenre"
        style="@style/AudioPlayerTrackInfo"
        android:text="@string/text_null"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/genre" />

    <TextView
        android:id="@+id/country"
        style="@style/AudioPlayerTextPlaceholder"
        android:layout_marginTop="17dp"
        android:text="@string/country"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/actualCountry"
        style="@style/AudioPlayerTrackInfo"
        android:text="@string/text_null"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/country" />
</androidx.constraintlayout.widget.ConstraintLayout>