<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/seToolbar"
        style="@style/ToolbarPageTittle"
        app:title="@string/search"
        app:titleTextAppearance="@style/ToolbarPageTittle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_input"
            android:drawableStart="@drawable/search_small_svg"
            android:drawablePadding="10dp"
            android:drawableTint="@color/searchPagePlaceholder"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin"
            android:singleLine="true"
            android:textColor="@color/YP_Black"
            android:textColorHint="@color/searchPagePlaceholder"
            android:textCursorDrawable="@drawable/input_cursor" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="9dp"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin"
            android:src="@drawable/baseline_close"
            android:visibility="gone"
            app:tint="@color/searchPagePlaceholder" />
    </FrameLayout>

    <ProgressBar android:id="@+id/searchProgressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/YP_Blue"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/historyElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/defaultBackground"
        android:visibility="gone">

        <TextView
            android:id="@+id/searchHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/search_history_header"
            android:textColor="@color/defaultTextColor"
            android:textSize="19sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrackHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/track_item" />

        <Button
            android:id="@+id/clearSearchHistory"
            style="@style/SearchButtons"
            android:background="@drawable/search_button_background"
            android:text="@string/clear_search"
            app:backgroundTint="@null" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"
        tools:listitem="@layout/track_item" />

    <LinearLayout
        android:id="@+id/errorMessageElement"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/track_search_error" />

        <TextView
            android:id="@+id/errorText"
            style="@style/TrackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:lines="4"
            android:maxLines="4"
            android:text="@string/connection_error"
            android:textColor="@color/defaultTextColor"
            android:textSize="19sp" />

        <Button
            android:id="@+id/refreshTracks"
            style="@style/SearchButtons"
            android:text="@string/refresh"
            android:visibility="visible"
            app:backgroundTint="@null" />
    </LinearLayout>

</LinearLayout>