<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/apToolbar"
        style="@style/ToolbarPageTittle"
        android:layout_height="48dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/new_playlists"
        app:titleTextAppearance="@style/ToolbarPageTittle" />

    <FrameLayout
        android:id="@+id/addImage"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apToolbar">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dashed_border" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/add_image" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/playlist_name"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/input_stroke_color"
        app:boxStrokeWidth="1dp"
        app:counterMaxLength="100"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name_edit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/input_hint_color"
            android:textColor="@color/defaultTextColor"
            android:textCursorDrawable="@drawable/input_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_descr"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/playlist_descr"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/input_stroke_color"
        app:boxStrokeWidth="1dp"
        app:counterMaxLength="100"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_descr_edit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/input_hint_color"
            android:textColor="@color/defaultTextColor"
            android:textCursorDrawable="@drawable/input_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
